--- a/SAP_HCP_Sensor_Step1.ipynb
+++ b/SAP_HCP_Sensor_Step1.ipynb
@@ -73,7 +73,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](Images/SAP_Step1_1.png)"
+    "![title](images/SAP_Step1_1.png)"
    ]
   },
   {
@@ -87,7 +87,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](Images/SAP_Step1_2.png)"
+    "![title](images/SAP_Step1_2.png)"
    ]
   },
   {
@@ -96,7 +96,7 @@
    "source": [
     "- Device Management > All Message Types\n",
     "\n",
-    "![title](Images/SAP_Step1_3.png)"
+    "![title](images/SAP_Step1_3.png)"
    ]
   },
   {
@@ -118,7 +118,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](Images/SAP_Step1_4.png)"
+    "![title](images/SAP_Step1_4.png)"
    ]
   },
   {
@@ -138,7 +138,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](Images/SAP_Step1_5.png)"
+    "![title](images/SAP_Step1_5.png)"
    ]
   },
   {
@@ -160,7 +160,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](Images/SAP_Step1_6.png)"
+    "![title](images/SAP_Step1_6.png)"
    ]
   },
   {
