--- a/DS_eBay_Kleinanzeigen.ipynb
+++ b/DS_eBay_Kleinanzeigen.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "![title](images/L1_copy.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Data Science"
    ]
   },
