--- a/DS_eBay_Kleinanzeigen.ipynb
+++ b/DS_eBay_Kleinanzeigen.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/L1_copy.png)"
+    "![title](images/L1.png)"
    ]
   },
   {
