--- a/DL_Image_Classification.ipynb
+++ b/DL_Image_Classification.ipynb
@@ -25,7 +25,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Introduction:"
+    "## Introduction"
    ]
   },
   {
@@ -43,7 +43,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Requirements:"
+    "## Requirements"
    ]
   },
   {
@@ -81,7 +81,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Development"
+    "## Development"
    ]
   },
   {
@@ -158,21 +158,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Result:"
+    "## Result"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](videos/dl_on_bmw_car.mov)"
+    "### Red Ball"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](videos/dl_on_red_ball.mov)"
+    "![title](videos/dl_on_red_ball.mp4)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### BMW toy car"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![title](videos/dl_on_bmw_car.mp4)"
    ]
   }
  ],
