--- a/CV_Self_Driving_Car.ipynb
+++ b/CV_Self_Driving_Car.ipynb
@@ -126,7 +126,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](videos/cv_self_driving_car.mp4)"
+    "[Please watch the video!](./videos/cv_self_driving_car.mp4)"
    ]
   }
  ],
