--- a/CV_Self_Driving_Car.ipynb
+++ b/CV_Self_Driving_Car.ipynb
@@ -126,7 +126,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[Please watch the video!](./videos/cv_self_driving_car.mp4)"
+    "<video src=\"./videos/cv_self_driving_car.mp4\" width=\"304\" height=\"540\" controls preload></video>"
    ]
   }
  ],
