--- a/CV_Self_Driving_Car.ipynb
+++ b/CV_Self_Driving_Car.ipynb
@@ -126,8 +126,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<video src=\"./videos/cv_self_driving_car.mp4\" width=\"304\" height=\"540\" controls preload></video>"
+    "<video src=\"videos/cv_self_driving_car.mp4\" width=\"304\" height=\"540\" controls preload></video>"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
