--- a/CV_Self_Driving_Car.ipynb
+++ b/CV_Self_Driving_Car.ipynb
@@ -126,15 +126,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<video src=\"videos/cv_self_driving_car.mp4\" width=\"304\" height=\"540\" controls preload></video>"
+    "[Please watch the video!](./videos/cv_self_driving_car.mp4)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "![title](images/cv_car_video.png)"
+   ]
   }
  ],
  "metadata": {
