--- a/DL_Image_Classification.ipynb
+++ b/DL_Image_Classification.ipynb
@@ -172,7 +172,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](videos/dl_on_red_ball.mp4)"
+    "[Please watch the video!](./videos/dl_on_red_ball.mp4)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![title](images/dl_red_ball_video.png)"
    ]
   },
   {
@@ -186,7 +193,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](videos/dl_on_bmw_car.mp4)"
+    "[Please watch the video!](videos/dl_on_bmw_car.mp4)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![title](images/dl_bmw_car_video.png)"
    ]
   }
  ],
