--- a/CV_Self_Driving_Car.ipynb
+++ b/CV_Self_Driving_Car.ipynb
@@ -11,6 +11,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Computer Vision"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# OpenCV"
    ]
   },
@@ -91,21 +98,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Road"
+    "### 4wd car "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/cv_car_road.jpg)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 4wd car"
+    "* ### Version A"
    ]
   },
   {
@@ -119,6 +119,55 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "* ### Version B"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![title](images/cv_car_lateral1.jpg)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Track"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* ### Straight Track"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![title](images/cv_car_track_s.jpg)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* ### Curved Track"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![title](images/cv_car_track_c.jpg)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Result"
    ]
   },
@@ -126,7 +175,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[Please watch the video!](./videos/cv_self_driving_car.mp4)"
+    "* ### Straight Track"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[Please watch the video!](videos/cv_self_driving_car.mp4)"
    ]
   },
   {
@@ -134,6 +190,27 @@
    "metadata": {},
    "source": [
     "![title](images/cv_car_video.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* ### Curved Track"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[Please watch the video!](videos/cv_self_driving_car1.mp4)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![title](images/cv_car_video1.png)"
    ]
   }
  ],
