--- a/CV_Self_Driving_Car.ipynb
+++ b/CV_Self_Driving_Car.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Computer Vision"
+    "# Computer Vision"
    ]
   },
   {
@@ -105,7 +105,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* ### Version A"
+    "### Version A"
    ]
   },
   {
@@ -119,7 +119,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* ### Version B"
+    "### Version B"
    ]
   },
   {
@@ -140,7 +140,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* ### Straight Track"
+    "### Straight Track"
    ]
   },
   {
@@ -154,7 +154,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* ### Curved Track"
+    "### Curved Track"
    ]
   },
   {
@@ -175,7 +175,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* ### Straight Track"
+    "### Straight Track"
    ]
   },
   {
@@ -196,7 +196,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* ### Curved Track"
+    "### Curved Track"
    ]
   },
   {
