--- a/Spark_Nvidia_Jetson_Nano.ipynb
+++ b/Spark_Nvidia_Jetson_Nano.ipynb
@@ -104,7 +104,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Downloads / Pre-built for Apache Hadoop x.x and later"
+    "Downloads / Pre-built with user-provided Apache Hadoop"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note: This option is more suitable in case you have installed Apache Hadoop, however in this case Hadoop is not necessary."
    ]
   },
   {
