--- a/BD_Hadoop_HDFS.ipynb
+++ b/BD_Hadoop_HDFS.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Apache Spark"
+    "# Apache Hadoop - HDFS"
    ]
   },
   {
@@ -39,7 +39,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The objective of this project is to install Apache Spark on Nvidia Jetson Nano and count the number of records of a log file using Apache Spark with Scala and Python."
+    "The objective of this project is to setup, start and load a file to Apache Hadoop - HDFS on Nvidia Jetson Nano."
    ]
   },
   {
@@ -54,7 +54,7 @@
    "metadata": {},
    "source": [
     "- Nvidia Jetson Nano\n",
-    "- Spark"
+    "- Hadoop"
    ]
   },
   {
@@ -68,190 +68,163 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Verify Java Installation"
+    "### xml files"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "java -version"
+    "- core-site.xml\n",
+    "- hdfs-site.xml"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Install Java"
+    "### Directories"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- sudo apt-get install openjdk-8-jre\n",
-    "- sudo apt-get install openjdk-8-jdk"
+    "- namenode\n",
+    "- datanode"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Download Spark"
+    "### Start HDFS"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "https://spark.apache.org"
+    "![title](images/hadoop_hdfs_start.png)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Downloads / Pre-built with user-provided Apache Hadoop"
+    "### Java Virtual Machine Process Status Tool"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Note: This option is more suitable in case you have installed Apache Hadoop, however in this case Hadoop is not necessary."
+    "![title](images/hadoop_hdfs_jps.png)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Setup Spark - One master and one slave "
+    "### Web"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Master"
+    "![title](images/hadoop_hdfs_w1.png)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "sbin/start-master.sh"
+    "![title](images/hadoop_hdfs_w2.png)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### localhost:8080"
+    "### Load a file"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/spark_lmaster.png)"
+    "List current files"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Slave"
+    "![title](images/hadoop_hdfs_f1.png)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "sbin/start-slave.sh"
+    "Create a data directory"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### localhost:8080"
+    "![title](images/hadoop_hdfs_f2.png)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/spark_lslave.png)"
+    "Load a file"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Log"
+    "![title](images/hadoop_hdfs_f3.png)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Go back to the project \"Create and analyze your own dataset\" and grab the log file. Use Apache Spark with Scala and Python to count the number of records of the log file."
+    "List current files"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Spark - Scala"
+    "![title](images/hadoop_hdfs_f4.png)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "bin/spark-shell"
+    "![title](images/hadoop_hdfs_w3.png)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/spark_scala.png)"
+    "It is important to note that there is just one block information because the file is very small, however larger files will generate more blocks, 128 MB each one."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Spark - Python"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "bin/pyspark"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "![title](images/spark_python.png)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Results"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Using Apache Spark the result with Scala and Python was the same 336 records."
+    "![title](images/hadoop_hdfs_w4.png)"
    ]
   },
   {
