--- a/BD_Hadoop_MapReduce.ipynb
+++ b/BD_Hadoop_MapReduce.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Apache Spark"
+    "# Apache Hadoop - MapReduce"
    ]
   },
   {
@@ -39,7 +39,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The objective of this project is to install Apache Spark on Nvidia Jetson Nano and count the number of records of a log file using Apache Spark with Scala and Python."
+    "The objective of this project is to install Apache Hadoop on Nvidia Jetson Nano and use MapReduce with a simple application."
    ]
   },
   {
@@ -54,7 +54,7 @@
    "metadata": {},
    "source": [
     "- Nvidia Jetson Nano\n",
-    "- Spark"
+    "- Hadoop"
    ]
   },
   {
@@ -97,161 +97,137 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Download Spark"
+    "### Download Hadoop"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "https://spark.apache.org"
+    "https://hadoop.apache.org"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Downloads / Pre-built with user-provided Apache Hadoop"
+    "Downloads / Source / Version x.x.x"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Note: This option is more suitable in case you have installed Apache Hadoop, however in this case Hadoop is not necessary."
+    "### Environment Variables"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Setup Spark - One master and one slave "
+    "- HADOOP_HOME\n",
+    "- JAVA_HOME\n",
+    "- PATH"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Master"
+    "### Verify Hadoop Installation"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "sbin/start-master.sh"
+    "hadoop version"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### localhost:8080"
+    "![title](images/hadoop_one_ver.png)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/spark_lmaster.png)"
+    "### Map Reduce"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Slave"
+    "Java Archive \n",
+    "- hadoop-mapreduce-examples-3.1.1.jar\n",
+    "\n",
+    "Program \n",
+    "- WordCount: It counts the number of occurrences of each word in a given input set.\n",
+    "\n",
+    "Input\n",
+    "- test.txt\n",
+    "\n",
+    "Output\n",
+    "- Folder\n",
+    "\n",
+    "Command\n",
+    "- hadoop jar hadoop-mapreduce-examples-3.1.1.jar wordcount /home/edot/hadoop_test/test.txt /home/edot/hadoop_test/output\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "sbin/start-slave.sh"
+    "Execution"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### localhost:8080"
+    "![title](images/hadoop_one_res1.png)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/spark_lslave.png)"
+    "### Results"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Log"
+    "Two Files\n",
+    "- part-r-00000\n",
+    "- _SUCCESS"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Go back to the project \"Create and analyze your own dataset\" and grab the log file. Use Apache Spark with Scala and Python to count the number of records of the log file."
+    "![title](images/hadoop_one_res2.png)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Spark - Scala"
+    "File\n",
+    "- part-r-00000 "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "bin/spark-shell"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "![title](images/spark_scala.png)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Spark - Python"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "bin/pyspark"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "![title](images/spark_python.png)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Results"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Using Apache Spark the result with Scala and Python was the same 336 records."
+    "![title](images/hadoop_one_res3.png)"
    ]
   },
   {
