--- a/BD_Hive.ipynb
+++ b/BD_Hive.ipynb
@@ -11,14 +11,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Apache Spark"
+    "# Apache Hive ™ "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Standalone on Nvidia Jetson Nano"
+    "# Nvidia Jetson Nano"
    ]
   },
   {
@@ -39,7 +39,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The objective of this project is to install Apache Spark on Nvidia Jetson Nano and count the number of records of a log file using Apache Spark with Scala and Python."
+    "The objective of this project is to install and setup Apache Hive on Nvidia Jetson Nano, then check its functionality by creating a table in a database."
    ]
   },
   {
@@ -54,7 +54,7 @@
    "metadata": {},
    "source": [
     "- Nvidia Jetson Nano\n",
-    "- Spark"
+    "- Apache Hive 3.1.x"
    ]
   },
   {
@@ -97,161 +97,175 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Download Spark"
+    "### Download Apache Hive"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "https://spark.apache.org"
+    "https://hive.apache.org"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Downloads / Pre-built with user-provided Apache Hadoop"
+    "/Downloads /Download a release now!"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Note: This option is more suitable in case you have installed Apache Hadoop, however in this case Hadoop is not necessary."
+    "### Environment Variables"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Setup Spark - One master and one slave "
+    "- HIVE_HOME\n",
+    "- HIVE_CONF_DIR"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Master"
+    "### Files"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "sbin/start-master.sh"
+    "- hive-site.xml\n",
+    "- hive-env.sh\n",
+    "- hive-exec-log4j2.properties\n",
+    "- hive-log4j2.properties\n",
+    "- beeline-log4j2.properties "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### localhost:8080"
+    "### Directories"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/spark_lmaster.png)"
+    "- /tmp\n",
+    "- /user/hive/warehouse"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Slave"
+    "### Initialize to current schema"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "sbin/start-slave.sh"
+    "![title](images/hive_1.png)\n",
+    "![title](images/hive_2.png)\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### localhost:8080"
+    "### Hive"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/spark_lslave.png)"
+    "![title](images/hive_3.png)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Log"
+    "### Database"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Go back to the project \"Create and analyze your own dataset\" and grab the log file. Use Apache Spark with Scala and Python to count the number of records of the log file."
+    "List databases"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Spark - Scala"
+    "![title](images/hive_4.png)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "bin/spark-shell"
+    "Create a database"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/spark_scala.png)"
+    "![title](images/hive_5.png)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Spark - Python"
+    "Utilize a database"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "bin/pyspark"
+    "![title](images/hive_6.png)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/spark_python.png)"
+    "Create a table"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Results"
+    "![title](images/hive_7.png)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Using Apache Spark the result with Scala and Python was the same 336 records."
+    "### Web"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![title](images/hive_8.png)"
    ]
   },
   {
