--- a/BD_Azure_Spark.ipynb
+++ b/BD_Azure_Spark.ipynb
@@ -91,7 +91,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[Spark - Jupyter Notebook Scala](BD_Azure_Spark_JN.ipynb)"
+    "[Spark - Jupyter Notebook Scala](BD_Azure_Spark_JN.ipynb)\n",
+    "\n",
+    "![title](images/spark-jn.png)"
    ]
   },
   {
