--- a/SAP_Hana_Azure_A.ipynb
+++ b/SAP_Hana_Azure_A.ipynb
@@ -4,7 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# SAP HANA"
+    "# SAP"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# SAP HANA, express edition"
    ]
   },
   {
@@ -32,7 +39,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The objective of this project is to deploy SAP HANA, express edition on Microsoft Azure. "
+    "The objective of this project is to deploy SAP HANA, express edition on Microsoft Azure. \n",
+    "\n",
+    "The dataset is the result of the project  [Data Science - Create and analyze your own dataset](DS_Dataset_Step1.ipynb)"
    ]
   },
   {
