--- a/BD_Azure_Hadoop.ipynb
+++ b/BD_Azure_Hadoop.ipynb
@@ -39,7 +39,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The objective of this project is to select the highest temperature in a dataset using a Hadoop Cluster, Apache Ambari and Apache Hive on Microsoft Azure. "
+    "The objective of this project is to select the highest temperature in a dataset using a Hadoop Cluster, Apache Ambari and Apache Hive on Microsoft Azure. \n",
+    "\n",
+    "The dataset is the result of the project  [Data Science - Create and analyze your own dataset](DS_Dataset_Step1.ipynb)"
    ]
   },
   {
