--- a/GCP_IoT_Step1.ipynb
+++ b/GCP_IoT_Step1.ipynb
@@ -25,6 +25,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "![title](images/gcp_iot_0a.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Requirements"
    ]
   },
