--- a/jupyter_notebooks/AWS_IoT_Step1.ipynb
+++ b/jupyter_notebooks/AWS_IoT_Step1.ipynb
@@ -32,7 +32,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/aws_iot_a00.png)"
+    "![title](//images/aws_iot_a00.png)"
    ]
   },
   {
