--- a/jupyter_notebooks/AWS_IoT_Step2.ipynb
+++ b/jupyter_notebooks/AWS_IoT_Step2.ipynb
@@ -39,7 +39,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/aws_iot_b01.png)"
+    "![title](../images/aws_iot_b01.png)"
    ]
   },
   {
@@ -53,7 +53,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/aws_iot_b02.png)"
+    "![title](../images/aws_iot_b02.png)"
    ]
   },
   {
@@ -67,7 +67,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/aws_iot_b03.png)"
+    "![title](../images/aws_iot_b03.png)"
    ]
   },
   {
@@ -81,7 +81,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/aws_iot_b04.png)"
+    "![title](../images/aws_iot_b04.png)"
    ]
   },
   {
@@ -95,7 +95,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/aws_iot_b05.png)"
+    "![title](../images/aws_iot_b05.png)"
    ]
   }
  ],
