--- a/jupyter_notebooks/AWS_IoT_Step5.ipynb
+++ b/jupyter_notebooks/AWS_IoT_Step5.ipynb
@@ -32,7 +32,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/aws_iot_e01.png)"
+    "![title](../images/aws_iot_e01.png)"
    ]
   },
   {
@@ -46,7 +46,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/aws_iot_e02.png)"
+    "![title](../images/aws_iot_e02.png)"
    ]
   },
   {
@@ -60,7 +60,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/aws_iot_e03.png)"
+    "![title](../images/aws_iot_e03.png)"
    ]
   },
   {
