--- a/jupyter_notebooks/AWS_IoT_Step3.ipynb
+++ b/jupyter_notebooks/AWS_IoT_Step3.ipynb
@@ -32,7 +32,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/aws_iot_c01.png)"
+    "![title](../images/aws_iot_c01.png)"
    ]
   },
   {
@@ -46,7 +46,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/aws_iot_c02.png)"
+    "![title](../images/aws_iot_c02.png)"
    ]
   },
   {
@@ -60,7 +60,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/aws_iot_c03.png)"
+    "![title](../images/aws_iot_c03.png)"
    ]
   },
   {
@@ -74,7 +74,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/aws_iot_c04.png)"
+    "![title](../images/aws_iot_c04.png)"
    ]
   },
   {
@@ -88,7 +88,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/aws_iot_c05.png)"
+    "![title](../images/aws_iot_c05.png)"
    ]
   },
   {
@@ -102,7 +102,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/aws_iot_c06.png)"
+    "![title](../images/aws_iot_c06.png)"
    ]
   },
   {
@@ -116,7 +116,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/aws_iot_c07.png)"
+    "![title](../images/aws_iot_c07.png)"
    ]
   }
  ],
