--- a/jupyter_notebooks/AWS_IoT_Step4.ipynb
+++ b/jupyter_notebooks/AWS_IoT_Step4.ipynb
@@ -39,7 +39,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/aws_iot_d01.png)"
+    "![title](../images/aws_iot_d01.png)"
    ]
   },
   {
@@ -53,14 +53,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/aws_iot_d02.png)"
+    "![title](../images/aws_iot_d02.png)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/aws_iot_d03.png)"
+    "![title](../images/aws_iot_d03.png)"
    ]
   },
   {
@@ -74,21 +74,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/aws_iot_d04.png)"
+    "![title](../images/aws_iot_d04.png)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/aws_iot_d05.png)"
+    "![title](../images/aws_iot_d05.png)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/aws_iot_d06.png)"
+    "![title](../images/aws_iot_d06.png)"
    ]
   },
   {
@@ -102,21 +102,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/aws_iot_d07.png)"
+    "![title](../images/aws_iot_d07.png)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/aws_iot_d08.png)"
+    "![title](../images/aws_iot_d08.png)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/aws_iot_d09.png)"
+    "![title](../images/aws_iot_d09.png)"
    ]
   },
   {
@@ -130,21 +130,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/aws_iot_d10.png)"
+    "![title](../images/aws_iot_d10.png)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/aws_iot_d11.png)"
+    "![title](../images/aws_iot_d11.png)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/aws_iot_d12.png)"
+    "![title](../images/aws_iot_d12.png)"
    ]
   },
   {
@@ -158,14 +158,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/aws_iot_d13.png)"
+    "![title](../images/aws_iot_d13.png)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/aws_iot_d14.png)"
+    "![title](../images/aws_iot_d14.png)"
    ]
   },
   {
@@ -179,7 +179,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/aws_iot_d15.png)"
+    "![title](../images/aws_iot_d15.png)"
    ]
   },
   {
@@ -193,7 +193,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/aws_iot_d16.png)"
+    "![title](../images/aws_iot_d16.png)"
    ]
   },
   {
@@ -207,7 +207,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/aws_iot_d17.png)"
+    "![title](../images/aws_iot_d17.png)"
    ]
   },
   {
@@ -221,7 +221,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/aws_iot_d18.png)"
+    "![title](../images/aws_iot_d18.png)"
    ]
   },
   {
@@ -235,7 +235,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/aws_iot_d19.png)"
+    "![title](../images/aws_iot_d19.png)"
    ]
   },
   {
@@ -249,7 +249,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/aws_iot_d20.png)"
+    "![title](../images/aws_iot_d20.png)"
    ]
   },
   {
@@ -263,7 +263,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/aws_iot_d21.png)"
+    "![title](../images/aws_iot_d21.png)"
    ]
   },
   {
@@ -277,7 +277,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/aws_iot_d22.png)"
+    "![title](../images/aws_iot_d22.png)"
    ]
   },
   {
@@ -291,7 +291,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/aws_iot_d23.png)"
+    "![title](../images/aws_iot_d23.png)"
    ]
   },
   {
@@ -305,7 +305,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/aws_iot_d24.png)"
+    "![title](../images/aws_iot_d24.png)"
    ]
   },
   {
@@ -319,7 +319,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/aws_iot_d25.png)"
+    "![title](../images/aws_iot_d25.png)"
    ]
   },
   {
