--- a/jupyter_notebooks/AWS_IoT_Step1.ipynb
+++ b/jupyter_notebooks/AWS_IoT_Step1.ipynb
@@ -32,7 +32,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](//images/aws_iot_a00.png)"
+    "![title](../images/aws_iot_a00.png)"
    ]
   },
   {
@@ -92,7 +92,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/aws_iot_a01.png)"
+    "![title](../images/aws_iot_a01.png)"
    ]
   },
   {
@@ -106,7 +106,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/aws_iot_a02.png)"
+    "![title](../images/aws_iot_a02.png)"
    ]
   },
   {
@@ -120,14 +120,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/aws_iot_a03.png)"
+    "![title](../images/aws_iot_a03.png)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/aws_iot_a04.png)"
+    "![title](../images/aws_iot_a04.png)"
    ]
   },
   {
@@ -141,7 +141,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/aws_iot_a05.png)"
+    "![title](../images/aws_iot_a05.png)"
    ]
   },
   {
@@ -155,7 +155,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/aws_iot_a06.png)"
+    "![title](../images/aws_iot_a06.png)"
    ]
   },
   {
@@ -169,7 +169,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/aws_iot_a07.png)"
+    "![title](../images/aws_iot_a07.png)"
    ]
   },
   {
@@ -183,7 +183,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/aws_iot_a08.png)"
+    "![title](../images/aws_iot_a08.png)"
    ]
   },
   {
@@ -197,14 +197,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/aws_iot_a09.png)"
+    "![title](../images/aws_iot_a09.png)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/aws_iot_a10.png)"
+    "![title](../images/aws_iot_a10.png)"
    ]
   },
   {
