--- a/jupyter_notebooks/GCP_IoT_Step1A.ipynb
+++ b/jupyter_notebooks/GCP_IoT_Step1A.ipynb
@@ -25,7 +25,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/gcp_iot_0a.png)"
+    "![title](../images/gcp_iot_0a.png)"
    ]
   },
   {
@@ -101,7 +101,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/gcp_iot_1a.png)"
+    "![title](../images/gcp_iot_1a.png)"
    ]
   },
   {
@@ -115,7 +115,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/gcp_iot_1b.png)"
+    "![title](../images/gcp_iot_1b.png)"
    ]
   },
   {
@@ -129,7 +129,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/gcp_iot_1c.png)"
+    "![title](../images/gcp_iot_1c.png)"
    ]
   }
  ],
@@ -149,7 +149,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
