--- a/jupyter_notebooks/GCP_IoT_Step1D.ipynb
+++ b/jupyter_notebooks/GCP_IoT_Step1D.ipynb
@@ -18,91 +18,49 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Step 1G"
+    "## Step 1D"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Google Cloud Platform - Data Studio"
+    "## Google Cloud Platform - Data Storage"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Finally, data could be visualized as a report."
+    "Dataflow needs a bucket as a temporary location to write temporary files."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Data Studio"
+    "### Create a bucket"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/gcp_iot_7a.png)"
+    "![title](../images/gcp_iot_4a.png)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Data source"
+    "### Bucket"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/gcp_iot_7b.png)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### BigQuery connector"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "![title](images/gcp_iot_7c.png)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Schema"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "![title](images/gcp_iot_7d.png)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Report"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "![title](images/gcp_iot_7e.png)"
+    "![title](../images/gcp_iot_4b.png)"
    ]
   }
  ],
@@ -122,7 +80,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
