--- a/jupyter_notebooks/GCP_IoT_Step1E.ipynb
+++ b/jupyter_notebooks/GCP_IoT_Step1E.ipynb
@@ -18,105 +18,77 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Step 1F"
+    "## Step 1E"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Google Cloud Platform - Dataflow"
+    "## Google Cloud Platform - BigQuery"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Dataflow will process the streaming pipeline using BigQuery and Cloud Storage. "
+    "Dataflow will use a template based on Pub/Sub-BigQuery. BigQuery as a data warehouse will save data from messages and it will be linked to Data Studio through a connector. It is important that the schema should be defined as the payload."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Create job from template"
+    "### Create dateset"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/gcp_iot_6a.png)"
+    "![title](../images/gcp_iot_5a.png)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Run job"
+    "### Dataset"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/gcp_iot_6b.png)"
+    "![title](../images/gcp_iot_5b.png)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Job Status"
+    "### Create table"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/gcp_iot_6c.png)"
+    "![title](../images/gcp_iot_5c.png)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/gcp_iot_6d.png)"
+    "### Table"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Once the job is running, data will be processed by Dataflow. You cloud explore it using BigQuery."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "![title](images/gcp_iot_6e.png)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Job status - Stop a job once the objective has been acomplished."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "![title](images/gcp_iot_6f.png)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "![title](images/gcp_iot_6g.png)"
+    "![title](../images/gcp_iot_5d.png)"
    ]
   }
  ],
@@ -136,7 +108,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
