--- a/jupyter_notebooks/GCP_IoT_Step1F.ipynb
+++ b/jupyter_notebooks/GCP_IoT_Step1F.ipynb
@@ -18,91 +18,105 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Step 1C"
+    "## Step 1F"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Google Cloud Platform - IoT Core"
+    "## Google Cloud Platform - Dataflow"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "IoT Core will manage the Raspberry PI as a device. It will be linked with the topic and public key previously created."
+    "Dataflow will process the streaming pipeline using BigQuery and Cloud Storage. "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Create a registry"
+    "### Create job from template"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/gcp_iot_3a.png)"
+    "![title](../images/gcp_iot_6a.png)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Create private and public keys"
+    "### Run job"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You can generate keys on GCP or through your terminal."
+    "![title](../images/gcp_iot_6b.png)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Create a device"
+    "### Job Status"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/gcp_iot_3b.png)"
+    "![title](../images/gcp_iot_6c.png)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Enter public key value"
+    "![title](../images/gcp_iot_6d.png)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/gcp_iot_3c.png)"
+    "Once the job is running, data will be processed by Dataflow. You cloud explore it using BigQuery."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Verify communication"
+    "![title](../images/gcp_iot_6e.png)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/gcp_iot_3d.png)"
+    "Job status - Stop a job once the objective has been acomplished."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![title](../images/gcp_iot_6f.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![title](../images/gcp_iot_6g.png)"
    ]
   }
  ],
@@ -122,7 +136,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
