--- a/jupyter_notebooks/GCP_IoT_Step1B.ipynb
+++ b/jupyter_notebooks/GCP_IoT_Step1B.ipynb
@@ -46,7 +46,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/gcp_iot_2a.png)"
+    "![title](../images/gcp_iot_2a.png)"
    ]
   },
   {
@@ -60,7 +60,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/gcp_iot_2b.png)"
+    "![title](../images/gcp_iot_2b.png)"
    ]
   },
   {
@@ -74,7 +74,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/gcp_iot_2c.png)"
+    "![title](../images/gcp_iot_2c.png)"
    ]
   },
   {
@@ -88,7 +88,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/gcp_iot_2d.png)"
+    "![title](../images/gcp_iot_2d.png)"
    ]
   },
   {
@@ -115,7 +115,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
