--- a/jupyter_notebooks/GCP_IoT_Step1C.ipynb
+++ b/jupyter_notebooks/GCP_IoT_Step1C.ipynb
@@ -18,49 +18,91 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Step 1D"
+    "## Step 1C"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Google Cloud Platform - Data Storage"
+    "## Google Cloud Platform - IoT Core"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Dataflow needs a bucket as a temporary location to write temporary files."
+    "IoT Core will manage the Raspberry PI as a device. It will be linked with the topic and public key previously created."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Create a bucket"
+    "### Create a registry"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/gcp_iot_4a.png)"
+    "![title](../images/gcp_iot_3a.png)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Bucket"
+    "### Create private and public keys"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/gcp_iot_4b.png)"
+    "You can generate keys on GCP or through your terminal."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Create a device"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![title](../images/gcp_iot_3b.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Enter public key value"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![title](../images/gcp_iot_3c.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Verify communication"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![title](../images/gcp_iot_3d.png)"
    ]
   }
  ],
@@ -80,7 +122,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
