--- a/jupyter_notebooks/GCP_IoT_Step1G.ipynb
+++ b/jupyter_notebooks/GCP_IoT_Step1G.ipynb
@@ -18,77 +18,91 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Step 1E"
+    "## Step 1G"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Google Cloud Platform - BigQuery"
+    "## Google Cloud Platform - Data Studio"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Dataflow will use a template based on Pub/Sub-BigQuery. BigQuery as a data warehouse will save data from messages and it will be linked to Data Studio through a connector. It is important that the schema should be defined as the payload."
+    "Finally, data could be visualized as a report."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Create dateset"
+    "### Data Studio"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/gcp_iot_5a.png)"
+    "![title](../images/gcp_iot_7a.png)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Dataset"
+    "### Data source"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/gcp_iot_5b.png)"
+    "![title](../images/gcp_iot_7b.png)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Create table"
+    "### BigQuery connector"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/gcp_iot_5c.png)"
+    "![title](../images/gcp_iot_7c.png)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Table"
+    "### Schema"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/gcp_iot_5d.png)"
+    "![title](../images/gcp_iot_7d.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Report"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![title](../images/gcp_iot_7e.png)"
    ]
   }
  ],
@@ -108,7 +122,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
